--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,5 @@
-<footer class="bg-white rounded-lg">
-  <div class="w-full mx-auto p-4">
-      <hr class="border-gray-200 border-2 my-8" />
-      <span class="block text-center text-gray-600">© 2024 <a href="https://github.com/Dotdae" class="hover:underline">d0tsea™</a>. All rights reserved.</span>
-  </div>
+<footer class="overflow-hidden w-full mx-auto mb-0 p-4 bg-white rounded-lg absolute bottom-0">
+    <hr class="border-gray-200 border-2 my-6" />
+    <span class="block text-center text-gray-600">© 2024 <a href="https://github.com/Dotdae" class="hover:underline">d0tsea™</a>. All rights reserved.</span>
 </footer>
 
