--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,11 +1,7 @@
-<div class="">
-  <app-sidebar/>
-  <div class="">
-    <div class="mt-12">
-      <router-outlet/>
-    </div>
-    <div>
-      <app-footer/>
-    </div>
-  </div>
+<div class="grid grid-cols-8 grid-rows-8 min-h-screen">
+  <app-sidebar class="row-span 3"/>
+  <main class="col-span-2 row-span-2">
+    <router-outlet/>
+  </main>
+  <app-footer class="col-span-2 col-start-2 row-start-3"/>
 </div>
