--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
           <svg class="fill-stroke" width="24" height="24" viewBox="0 -960 960 960" fill="#707FDD">
             <path d="M80-120v-80h800v80H80Zm40-120v-280h120v280H120Zm200 0v-480h120v480H320Zm200 0v-360h120v360H520Zm200 0v-600h120v600H720Z"/>
           </svg>
-          <a routerLink="/dashboard">Dashboard</a>
+          <a routerLink="init">Dashboard</a>
         </button>
         <button class="flex justify-start items-center space-x-6 hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2  w-full md:w-52">
           <svg class="fill-stroke" width="24px" height="24px" viewBox="0 -960 960 960" fill="#707FDD">
@@ -31,25 +31,25 @@
           <svg class="fill-stroke" width="24px" height="24px" viewBox="0 -960 960 960" fill="#707FDD">
             <path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/>
           </svg>
-          <p>Mensajes</p>
+          <a routerLink="messages">Mensajes</a>
         </button>
         <button class="flex justify-start items-center space-x-6 hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2  w-full md:w-52">
           <svg class="fill-stroke" width="24px" height="24px" viewBox="0 -960 960 960" fill="#707FDD">
             <path d="M160-120q-33 0-56.5-23.5T80-200v-440q0-33 23.5-56.5T160-720h160v-80q0-33 23.5-56.5T400-880h160q33 0 56.5 23.5T640-800v80h160q33 0 56.5 23.5T880-640v440q0 33-23.5 56.5T800-120H160Zm0-80h640v-440H160v440Zm240-520h160v-80H400v80ZM160-200v-440 440Z"/>
           </svg>
-          <p>Actividades</p>
+          <a routerLink="activities">Actividades</a>
         </button>
         <button class="flex justify-start items-center space-x-6 hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2  w-full md:w-52">
           <svg class="fill-stroke" width="24px" height="24px" viewBox="0 -960 960 960" fill="#707FDD">
             <path d="M80-120v-650l200-150 200 150v90h400v560H80Zm80-80h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 0h80v-80h-80v80Zm0 480h480v-400H320v400Zm240-240v-80h160v80H560Zm0 160v-80h160v80H560ZM400-440v-80h80v80h-80Zm0 160v-80h80v80h-80Z"/>
           </svg>
-          <p>Sectores</p>
+          <a routerLink="sectors">Sectores</a>
         </button>
         <button class="flex justify-start items-center space-x-6 hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2  w-full md:w-52">
           <svg class="fill-stroke" width="24px" height="24px" viewBox="0 -960 960 960" fill="#707FDD">
             <path d="M160-200h80v-320h480v320h80v-426L480-754 160-626v426Zm-80 80v-560l400-160 400 160v560H640v-320H320v320H80Zm280 0v-80h80v80h-80Zm80-120v-80h80v80h-80Zm80 120v-80h80v80h-80ZM240-520h480-480Z"/>
           </svg>
-          <p>Almacén</p>
+          <a routerLink="warehouse">Almacén</a>
         </button>
       </div>
     </div>
@@ -65,13 +65,13 @@
           <svg class="fill-stroke" width="24" height="24" viewBox="0 -960 960 960" fill="#707FDD">
             <path d="M80-120v-80h800v80H80Zm40-120v-280h120v280H120Zm200 0v-480h120v480H320Zm200 0v-360h120v360H520Zm200 0v-600h120v600H720Z"/>
           </svg>
-          <p>Reportes</p>
+          <a routerLink="reports">Reportes</a>
         </button>
         <button class="flex justify-start items-center space-x-6 hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2  w-full md:w-52">
           <svg class="fill-stroke" width="24px" height="24px" viewBox="0 -960 960 960" fill="#707FDD">
             <path d="m370-80-16-128q-13-5-24.5-12T307-235l-119 50L78-375l103-78q-1-7-1-13.5v-27q0-6.5 1-13.5L78-585l110-190 119 50q11-8 23-15t24-12l16-128h220l16 128q13 5 24.5 12t22.5 15l119-50 110 190-103 78q1 7 1 13.5v27q0 6.5-2 13.5l103 78-110 190-118-50q-11 8-23 15t-24 12L590-80H370Zm70-80h79l14-106q31-8 57.5-23.5T639-327l99 41 39-68-86-65q5-14 7-29.5t2-31.5q0-16-2-31.5t-7-29.5l86-65-39-68-99 42q-22-23-48.5-38.5T533-694l-13-106h-79l-14 106q-31 8-57.5 23.5T321-633l-99-41-39 68 86 64q-5 15-7 30t-2 32q0 16 2 31t7 30l-86 65 39 68 99-42q22 23 48.5 38.5T427-266l13 106Zm42-180q58 0 99-41t41-99q0-58-41-99t-99-41q-59 0-99.5 41T342-480q0 58 40.5 99t99.5 41Zm-2-140Z"/>
           </svg>
-          <p>Configuración</p>
+          <a routerLink="configuration">Configuración</a>
         </button>
       </div>
     </div>
