--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -84,13 +84,21 @@
             <img class="rounded-full w-10 h-10" src="https://github.com/Dotdae.png" alt="avatar"/>
           </div>
           <!--User data-->
-          <div class="flex justify-start flex-col items-start">
-            <p class="cursor-pointer text-sm leading-5 text-white">Christopher Ortega</p>
-            <p class="cursor-pointer text-xs leading-3 text-gray-300">chris&#64;gmail.com</p>
-          </div>
+          @if(isLogged){
+            <div class="flex justify-start flex-col items-start">
+              <p class="cursor-pointer text-sm leading-5 text-white">{{username}}</p>
+              <p class="cursor-pointer text-xs leading-3 text-gray-300">{{userRol}}</p>
+            </div>
+          }
+          @else{
+            <div class="flex justify-start flex-col items-start">
+              <p class="cursor-pointer text-sm leading-5 text-white">Christopher Ortega</p>
+              <p class="cursor-pointer text-xs leading-3 text-gray-300">chris&#64;gmail.com</p>
+            </div>
+          }
         </div>
         <!--Logout-->
-        <a routerLink="/login">
+        <a (click)="logout()">
           <svg class="cursor-pointer" width="24" height="24" viewBox="0 -960 960 960" fill="#707FDD">
             <path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h280v80H200Zm440-160-55-58 102-102H360v-80h327L585-622l55-58 200 200-200 200Z"/>
           </svg>
